--- a/app/globals.css
+++ b/app/globals.css
@@ -16,12 +16,30 @@
   }
 }
 
+.blend {
+  opacity: 0.15;
+}
+
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background: url("/wwwatercolor.webp");
+  backdrop-filter: blur(50px);
+  animation: pan 20s alternate infinite ease;
+}
+
+
+@keyframes pan {
+  0% {
+    background-position: 0px 0px;
+  }
+  100% {
+    background-position: -1000px -0px;
+  }
+}
+
+.shadows {
+  filter: drop-shadow(0 -26px 20px rgba(255,255,255,0.5));
+  filter: drop-shadow(-64px 64px 8px rgba(255,255,255,0.12));
+  filter: drop-shadow(0px 4px 8px rgba(0, 0, 0, 0.5));
+  filter: drop-shadow(-64px 64px 64px rgba(255, 255, 255, 0.75));
 }
