--- a/app/globals.css
+++ b/app/globals.css
@@ -16,11 +16,12 @@
   }
 }
 
-.blend {
+.noise {
   opacity: 0.15;
   aspect-ratio: auto 1 / 1;
   min-height: 100dvh;
   pointer-events: none;
+  z-index: -100;
 }
 
 body {
@@ -42,9 +43,6 @@ body {
   }
 }
 
-.shadows {
-  filter: drop-shadow(0 -26px 20px rgba(255,255,255,0.5));
-  filter: drop-shadow(-64px 64px 8px rgba(255,255,255,0.12));
-  filter: drop-shadow(0px 4px 8px rgba(0, 0, 0, 0.5));
-  filter: drop-shadow(-64px 64px 64px rgba(255, 255, 255, 0.75));
+.svg-glow {
+  filter: drop-shadow(-64px 64px 32px rgba(255,255,255,0.14));
 }
